--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.8.3",
     "nanoid": "^4.0.2",
     "pubsub-js": "^1.9.4",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@types/pubsub-js": "^1.8.3",
